fix arithmetics, display on forest